# a_networked_cache

./: .gitignore  CMakeLists.txt  Makefile  a_networked_cache  crank_it_up.py  data.tsv  performance_tests.py  raw_output.txt  readme.md  requirements.txt  test.py  test_server.sh  time.sh  work.py  workload.py
data/: 1_UDP_optimize_workload_data2016-05-07_15:45.csv  1_UDP_pre_workload_data2016-05-06_17:52.csv  1_UDP_workload_data2016-05-06_16:50.csv  1_workload_data2016-05-07_20:48.csv  2_UDP_optimize_workload_data2016-05-07_15:26.csv  2_UDP_pre_workload_data2016-05-06_18:02.csv  2_UDP_workload_data2016-05-06_17:07.csv  2_workload_data2016-05-07_21:27.csv  4_UDP_optimize_workload_data2016-05-07_15:17.csv  4_UDP_pre_workload_data2016-05-06_18:50.csv  4_UDP_workload_data2016-05-06_17:13.csv  4_workload_data2016-05-07_20:26.csv  8_UDP_optimize_workload_data2016-05-07_15:36.csv  8_UDP_pre_workload_data2016-05-06_18:59.csv  8_UDP_workload_data2016-05-06_17:21.csv  eight_UDP_workload_data2016-05-06_16:02.csv  four_UDP_workload_data2016-05-06_15:53.csv  one_UDP_workload_data2016-05-06_15:35.csv  pre_opt_4UDP_workload_data2016-05-08_11:34.csv  two_UDP_workload_data2016-05-06_15:44.csv
include/: distributions.h  evict.h  evict_tests.h  getRealTime.h  globals.h  http.h  network_client.h  network_server.h  network_tests.h  node.h  poco_client.h  poco_server.h
src/: Makefile  cache.cpp  cache_tests.cpp  dbLL.cpp  distributions.cpp  evict.cpp  evict_tests.cpp  getRealTime.cpp  globals.cpp  main.cpp  network_tests.cpp  node.cpp  poco_client.cpp  poco_server.cpp
